<resources>

    <string name="app_name">Movie Catalogue</string>
    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="director">Director</string>
    <string name="creator">Creator</string>
    <string name="status">Status</string>
    <string name="cast">Cast</string>
    <string name="revenue">Revenue</string>
    <string name="user_score">User\nScore</string>
    <string name="release_date">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="first_air_date">First Air Date</string>
    <string name="episodes">Episodes</string>
    <string name="overview">Overview</string>
    <string name="overview_dot">Overview. . .</string>
    <string name="overview_unavailable">the overview is not available on this language</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie. . .</string>
    <string name="search_tv">Search Tv Show. . .</string>

    <string name="language">Language</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="favorite_list">Favorite List</string>
    <string name="add_favorite">Add to Favorites?</string>
    <string name="remove_favorite">Remove from Favorites?</string>
    <string name="empty_favorite">You haven\'t added any Movie or Tv Show to your favorite list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_result">No result</string>
    <string name="favorite_movie_catalogue">Favorite\nMovie\nCatalogue</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="missing_you">We are missing you!</string>
    <string name="release_today">Released Today</string>
    <string name="release_today_head">Check Out Today\'s Released Movie!</string>

    <string name="key_reminder">key_reminder</string>
    <string name="key_release">key_release</string>
    <string name="title_reminder">Daily Reminder</string>
    <string name="title_release">Release Reminder</string>
    <string name="subtitle_reminder">Reminder to return to the app</string>
    <string name="subtitle_release">Reminder showing movies that released today</string>

    <string name="RUNTIME_COLON">RUNTIME:</string>
    <string name="OVERVIEW_COLON">OVERVIEW:</string>
    <string name="DIRECTOR_COLON">DIRECTOR:</string>
    <string name="RELEASE_COLON">RELEASE:</string>
    <string name="FIRST_EPISODE_COLON">RELEASE:</string>
    <string name="SEASON_COLON">SEASON:</string>
    <string name="STATUS_COLON">STATUS:</string>

    <string name="percent">%1$d \%%</string>
    <string name="kurung">(%1$s)</string>
    <string name="strip">%1$s\u0020\u0020-\u0020\u0020%2$s</string>
    <string name="title_detail">%1$s (%2$s)</string>
    <string name="title_detail_tv">%1$s \n(%2$s)</string>
    <string name="subtitle_detail">%1$s\u0020\u0020|\u0020\u0020%2$s</string>
    <string name="minutes">%1$d Minutes</string>
    <string name="episode_sesason">%1$d Episodes (%2$d Seasons)</string>
    <string name="successfully_remove_fav">%1$s removed from Favorite</string>
    <string name="successfully_add_fav">%1$s added to Favorite</string>
    <string name="duplicate_movie_found">%1$s already in your Favorite list</string>
    <string name="result">%1$d results found (Only shows max 15 results)</string>

    <string name="dummy_title">This Is Venom</string>
    <string name="dummy_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dummy_date">MMMM DD, YYYY</string>
    <string name="dummy_ratings">87%</string>
    <string name="dummy_year">(2018)</string>
    <string name="dummy_runtime">1h 52m</string>
    <string name="dummy_casting">Alan Walker</string>
    <string name="dummy_revenue">$500.000.000.00</string>
    <string name="dummy_director">Fachry Aditya</string>
    <string name="dummy_result">2 results found (Only shows 5 results)</string>

</resources>
