<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <group android:menuCategory="container">

        <item android:id="@+id/menu_favorite"
            android:title="@string/favorite"
            android:icon = "@drawable/ic_yellow"/>

        <item android:id="@+id/menu_language"
            android:title="@string/language"
            android:icon = "@drawable/ic_language" />

        <item android:id="@+id/menu_notification"
            android:title="@string/notification"
            android:icon = "@drawable/ic_language" />
    </group>
</menu>