<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/imgBgPoster"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        android:tint="@color/half_black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_venom" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetailPoster"
        android:layout_width="180dp"
        android:layout_height="270dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="8dp"
        android:elevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="@+id/imgBgPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBgPoster"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imgDetailPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/poster_venom" />

    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/cvDetailPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBgPoster"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tvDetailRating"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_green"
        android:gravity="center"
        android:text="@string/dummy_ratings"
        android:textColor="@color/white"
        android:theme="@style/white_16_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvDetailSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/dummy_runtime"
        android:theme="@style/grey_12"
        app:layout_constraintBottom_toBottomOf="@+id/imgBgPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDetailTitle" />

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:theme="@style/white_20"
        app:layout_constraintBottom_toTopOf="@+id/tvDetailSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cvDetailPoster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textDetail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        android:theme="@style/white_16"
        app:layout_constraintEnd_toStartOf="@+id/btnFavorite"
        app:layout_constraintStart_toEndOf="@+id/cvDetailPoster"
        app:layout_constraintTop_toBottomOf="@+id/imgBgPoster" />

    <TextView
        android:id="@+id/tvDetail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_date"
        android:theme="@style/grey_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textDetail1"
        app:layout_constraintTop_toBottomOf="@+id/textDetail1" />

    <TextView
        android:id="@+id/textDetail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/runtime"
        android:theme="@style/white_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textDetail1"
        app:layout_constraintTop_toBottomOf="@+id/tvDetail1" />

    <TextView
        android:id="@+id/tvDetail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:theme="@style/grey_12"
        android:text="@string/dummy_casting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textDetail2"
        app:layout_constraintTop_toBottomOf="@+id/textDetail2" />

    <TextView
        android:id="@+id/textDetail3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/status"
        android:theme="@style/white_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textDetail1"
        app:layout_constraintTop_toBottomOf="@+id/tvDetail2" />

    <TextView
        android:id="@+id/tvDetail3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:theme="@style/grey_12"
        android:text="@string/dummy_revenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textDetail3"
        app:layout_constraintTop_toBottomOf="@+id/textDetail3" />

    <TextView
        android:id="@+id/textOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:theme="@style/white_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cvDetailPoster"
        app:layout_constraintTop_toBottomOf="@+id/tvDetail3" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="#75FFFFFF"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOverview" />

    <TextView
        android:id="@+id/tvDetailDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/grey_14"
        android:text="@string/dummy_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_score"
        android:theme="@style/grey_12"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailRating"
        app:layout_constraintEnd_toStartOf="@+id/tvDetailRating"
        app:layout_constraintTop_toTopOf="@+id/tvDetailRating" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnFavorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_fav_off"
        app:layout_constraintBottom_toBottomOf="@+id/imgBgPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cvDetailPoster"
        app:layout_constraintTop_toBottomOf="@+id/imgBgPoster"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>